--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="/Views/gallery.html"> Ver Galeria </a>
             <label></label>
         </button>
-        <img src="Assets/undraw_wedding_re_66hj.svg" alt="Cargando imagen...">
+        <img src="Assets/undraw.svg" alt="Cargando imagen...">
 
 
     </main>
