--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main class="Mn-01"> 
         
         <button> 
-            <a href="/Views/gallery.html"> Ver Galeria </a>
+            <a href="https://juandevlp.github.io/amorcitogallery/"> Ver Galeria </a>
             <label></label>
         </button>
         <img src="Assets/undraw.svg" alt="Cargando imagen...">
